[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://wizzard/weapon_red_magic_staff.png" type="Texture" id=2]
[ext_resource path="res://wizzard/wizzard_m_run_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://wizzard/wizzard_m_run_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://wizzard/wizzard_m_run_anim_f2.png" type="Texture" id=5]
[ext_resource path="res://wizzard/wizzard_m_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://wizzard/wizzard_m_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://wizzard/wizzard_m_hit_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://wizzard/wizzard_m_idle_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://wizzard/wizzard_m_idle_anim_f1.png" type="Texture" id=10]
[ext_resource path="res://wizzard/wizzard_m_idle_anim_f2.png" type="Texture" id=11]
[ext_resource path="res://wizzard/pick_up_fire.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 6 )

[sub_resource type="Animation" id=3]
resource_name = "pickup"
length = 0.42
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.012, 0.024, 0.036, 0.048, 0.06, 0.072, 0.084, 0.096, 0.108, 0.12, 0.132, 0.144, 0.156, 0.168, 0.18, 0.192, 0.204, 0.216, 0.228, 0.24, 0.252, 0.264, 0.276, 0.288, 0.3, 0.312, 0.324, 0.336, 0.348, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.09, 0.27, 0.36, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.556863 ), Color( 0.988235, 0.835294, 0.345098, 0.780392 ), Color( 1, 0.262745, 0.207843, 0.623529 ), Color( 0.454902, 0.321569, 0.152941, 0.858824 ), Color( 0.454902, 0.321569, 0.152941, 0 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 22
script = ExtResource( 1 )

[node name="WeaponPivot" type="Position2D" parent="."]

[node name="Weapon" type="Sprite" parent="WeaponPivot"]
rotation = 1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, -14 )

[node name="ShootPoint" type="Position2D" parent="WeaponPivot"]
position = Vector2( 25.0799, 0.184414 )

[node name="RayCast2D" type="RayCast2D" parent="WeaponPivot"]
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.184418, -5.16351 )
frames = SubResource( 1 )
animation = "run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PickUp" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="PickUp"]
modulate = Color( 0.454902, 0.321569, 0.152941, 0 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 12 )
vframes = 6
hframes = 6
frame = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="PickUp"]
anims/pickup = SubResource( 3 )
